--- a/src/NextPage/Views/HomePage.xaml
+++ b/src/NextPage/Views/HomePage.xaml
@@ -14,6 +14,7 @@
     NavigationPage.HasNavigationBar="False">
     <ContentPage.Resources>
         <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+        <toolkit:IsStringNotNullOrWhiteSpaceConverter x:Key="IsStringNotNullOrWhiteSpaceConverter" />
     </ContentPage.Resources>
     <AbsoluteLayout>
         <CollectionView
@@ -80,6 +81,7 @@
                         <Label
                             Grid.Row="2"
                             Grid.ColumnSpan="2"
+                            IsVisible="{Binding Description, Converter={StaticResource IsStringNotNullOrWhiteSpaceConverter}}"
                             LineBreakMode="TailTruncation"
                             MaxLines="2"
                             Text="{Binding Description, Mode=OneTime}" />
